// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mobile 1`] = `
<ds-pagination
  aria-label="Sidenavigering"
  role="navigation"
>
  <ul>
    <li>
      <button
        type="button"
        aria-label="Forrige side"
      >
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 2"
      >
        2
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-current="true"
        aria-label="Side 3"
      >
        3
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 4"
      >
        4
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Neste side"
      >
      </button>
    </li>
  </ul>
</ds-pagination>
`;

exports[`Preview 1`] = `
<ds-pagination
  aria-label="Sidenavigering"
  role="navigation"
>
  <ul>
    <li>
      <button
        type="button"
        aria-label="Forrige side"
      >
        Forrige
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 1"
      >
        1
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 2"
      >
        2
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 3"
      >
        3
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 4"
        aria-current="true"
      >
        4
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 5"
      >
        5
      </button>
    </li>
    <li>
    </li>
    <li>
      <button
        type="button"
        aria-label="Side 10"
      >
        10
      </button>
    </li>
    <li>
      <button
        type="button"
        aria-label="Neste side"
      >
        Neste
      </button>
    </li>
  </ul>
</ds-pagination>
`;

exports[`With Anchor 1`] = `
<style>
  .pagination-with-anchor-main {
  gap: 70px;
  display: flex;
  flex-direction: column;
}
</style>
<div>
  <div>
    <input
      placeholder
      aria-label="Søk"
      autocomplete="url"
      type="search"
      value="https://udir.design.no/pagination"
    >
  </div>
  <ds-pagination
    aria-label="Sidenavigering"
    role="navigation"
  >
    <ul>
      <li>
        <a
          href="#side-3"
          aria-label="Forrige side"
        >
          Forrige
        </a>
      </li>
      <li>
        <a
          href="#side-1"
          aria-label="Side 1"
        >
          1
        </a>
      </li>
      <li>
        <a
          href="#side-2"
          aria-label="Side 2"
        >
          2
        </a>
      </li>
      <li>
        <a
          href="#side-3"
          aria-label="Side 3"
        >
          3
        </a>
      </li>
      <li>
        <a
          href="#side-4"
          aria-label="Side 4"
          aria-current="true"
        >
          4
        </a>
      </li>
      <li>
        <a
          href="#side-5"
          aria-label="Side 5"
        >
          5
        </a>
      </li>
      <li>
      </li>
      <li>
        <a
          href="#side-10"
          aria-label="Side 10"
        >
          10
        </a>
      </li>
      <li>
        <a
          href="#side-5"
          aria-label="Neste side"
        >
          Neste
        </a>
      </li>
    </ul>
  </ds-pagination>
</div>
`;
